--- a/gerenciador_tarefas/src/main/resources/application.properties
+++ b/gerenciador_tarefas/src/main/resources/application.properties
@@ -1,9 +1,18 @@
-spring.application.name=gerenciador_tarefas
-spring.datasource.url=jdbc:postgresql://localhost:5432/gerenciador_tarefas
-spring.datasource.username=gerenciador_user
-spring.datasource.password=mouseman132
-spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.application.name=gerenciador_tarefas
+#spring.datasource.url=jdbc:postgresql://localhost:5432/gerenciador_tarefas
+#spring.datasource.username=gerenciador_user
+#spring.datasource.password=mouseman132
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
 
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.application.name=gerenciador_tarefas
+spring.datasource.url=jdbc:postgresql://postgres.railway.internal:5432/railway
+spring.datasource.username=postgres
+spring.datasource.password=cUEsjGtpUPOxrGvQqULXAvNgbESEFtOx
+spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
