--- a/gerenciador_tarefas/src/main/resources/application.properties
+++ b/gerenciador_tarefas/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 spring.application.name=gerenciador_tarefas
-spring.datasource.url=jdbc:postgresql://localhost:5432/gerenciador_tarefas
-spring.datasource.username=gerenciador_user
-spring.datasource.password=mouseman132
+spring.datasource.url=jdbc:postgresql://dpg-cvkpj856ubrc73fsh2fg-a.oregon-postgres.render.com:5432/gerenciador_tarefas_uppv
+spring.datasource.username=gerenciador_tarefas_uppv_user
+spring.datasource.password=4Qu0SBSmWWdeJJItMiBVbkrnc0fYeRPr
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
 
 
 
