feat: add docker

--- a/gerenciador_tarefas/Dockerfile
+++ b/gerenciador_tarefas/Dockerfile
@@ -11,7 +11,8 @@ RUN apt-get update && apt-get install -y maven
 WORKDIR /app
 
 # Copie o arquivo pom.xml para baixar dependências primeiro
-COPY pom.xml .
+#COPY pom.xml .
+COPY gerenciador_tarefas/pom.xml .
 
 # Baixe as dependências do Maven
 RUN mvn dependency:go-offline
@@ -26,7 +27,8 @@ RUN mvn clean package -DskipTests
 EXPOSE 8080
 
 # Copiar o arquivo .jar para o container
-COPY target/gerenciador_tarefas-0.0.1-SNAPSHOT.jar /app/gerenciador-tarefas.jar
+#COPY target/gerenciador_tarefas-0.0.1-SNAPSHOT.jar /app/gerenciador-tarefas.jar
+COPY gerenciador_tarefas/target/gerenciador_tarefas-0.0.1-SNAPSHOT.jar /app/gerenciador-tarefas.jar
 
 # Verificar se o .jar foi copiado corretamente
 RUN ls -al /app
