--- a/gerenciador_tarefas/Dockerfile
+++ b/gerenciador_tarefas/Dockerfile
@@ -1,37 +1,62 @@
+## Use uma imagem base com o JDK
+#FROM openjdk:17-jdk-slim
+#
+## Adicione informações sobre o autor (opcional)
+#LABEL authors="Victor"
+#
+## Atualize o repositório e instale o Maven
+#RUN apt-get update && apt-get install -y maven
+#
+## Defina o diretório de trabalho dentro do container
+#WORKDIR /app
+#
+## Copie o arquivo pom.xml para baixar dependências primeiro
+##COPY pom.xml .
+#COPY gerenciador_tarefas/pom.xml .
+#
+## Baixe as dependências do Maven
+#RUN mvn dependency:go-offline
+#
+## Copie o restante do código da aplicação
+#COPY src /app/src
+#
+## Compile e empacote a aplicação (sem executar os testes)
+#RUN mvn clean package -DskipTests
+#
+## Exponha a porta que o Spring Boot usa (8080 é a porta padrão)
+#EXPOSE 8080
+#
+## Copiar o arquivo .jar para o container
+##COPY target/gerenciador_tarefas-0.0.1-SNAPSHOT.jar /app/gerenciador-tarefas.jar
+#COPY gerenciador_tarefas/target/gerenciador_tarefas-0.0.1-SNAPSHOT.jar /app/gerenciador-tarefas.jar
+#
+## Verificar se o .jar foi copiado corretamente
+#RUN ls -al /app
+#
+## Comando para rodar a aplicação
+#CMD ["java", "-jar", "/app/gerenciador-tarefas.jar"]
+
 # Use uma imagem base com o JDK
 FROM openjdk:17-jdk-slim
 
-# Adicione informações sobre o autor (opcional)
-LABEL authors="Victor"
-
-# Atualize o repositório e instale o Maven
-RUN apt-get update && apt-get install -y maven
-
-# Defina o diretório de trabalho dentro do container
+# Define o diretório de trabalho dentro do container
 WORKDIR /app
 
-# Copie o arquivo pom.xml para baixar dependências primeiro
-#COPY pom.xml .
+# Copiar o pom.xml e baixar dependências primeiro
 COPY gerenciador_tarefas/pom.xml .
 
-# Baixe as dependências do Maven
-RUN mvn dependency:go-offline
+# Baixar dependências do Maven
+RUN apt-get update && apt-get install -y maven && mvn dependency:go-offline
 
-# Copie o restante do código da aplicação
-COPY src /app/src
+# Copiar todo o código da aplicação
+COPY gerenciador_tarefas /app
 
-# Compile e empacote a aplicação (sem executar os testes)
+# Compilar e empacotar a aplicação (sem executar os testes)
 RUN mvn clean package -DskipTests
 
-# Exponha a porta que o Spring Boot usa (8080 é a porta padrão)
+# Expor a porta 8080
 EXPOSE 8080
 
-# Copiar o arquivo .jar para o container
-#COPY target/gerenciador_tarefas-0.0.1-SNAPSHOT.jar /app/gerenciador-tarefas.jar
-COPY gerenciador_tarefas/target/gerenciador_tarefas-0.0.1-SNAPSHOT.jar /app/gerenciador-tarefas.jar
+# Comando para rodar a aplicação diretamente do target/
+CMD ["java", "-jar", "target/gerenciador_tarefas-0.0.1-SNAPSHOT.jar"]
 
-# Verificar se o .jar foi copiado corretamente
-RUN ls -al /app
-
-# Comando para rodar a aplicação
-CMD ["java", "-jar", "/app/gerenciador-tarefas.jar"]
