fix: dockerfile hospedagem

--- a/gerenciador_tarefas/Dockerfile
+++ b/gerenciador_tarefas/Dockerfile
@@ -43,14 +43,15 @@ FROM openjdk:17-jdk-slim
 WORKDIR /app
 
 # Copiar o pom.xml e baixar dependências primeiro
-COPY pom.xml .
+#COPY pom.xml .
+COPY gerenciador_tarefas/pom.xml .
 
 # Baixar dependências do Maven
 RUN apt-get update && apt-get install -y maven && mvn dependency:go-offline
 
 # Copiar todo o código da aplicação
-COPY . /app
-
+#COPY . /app
+COPY gerenciador_tarefas /app
 # Compilar e empacotar a aplicação (sem executar os testes)
 RUN mvn clean package -DskipTests
 
